squashed: sync backfill with exchange progress, cancellation, and miningInProgress guard